--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,8 @@
 
 main:
   - title: "Publications"
-    url: /publications/
+    #~ url: /publications/
+    url: https://scholar.google.com/citations?user=7WTc0h4AAAAJ&hl=en&oi=ao
 
   - title: "Talks"
     url: /talks/    
@@ -20,8 +21,8 @@ main:
   - title: "Portfolio"
     url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  #~ - title: "Blog Posts"
+    #~ url: /year-archive/
     
   - title: "CV"
     url: /cv/
