--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Isaac Planas-Sitjà"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Behavioural ecologist, interested in complex systems, non-linear phenomena"
   location         : "Saitama, Japan"
   employer         : "iTHEMS, RIKEN"
   uri              : # URL
