--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,6 @@ main:
   - title: "Publications"
     #~ url: /publications/
     url: https://scholar.google.com/citations?user=7WTc0h4AAAAJ&hl=en&oi=ao
-    target: "_blank"
     
   - title: "Talks"
     url: /talks/    
@@ -19,8 +18,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  #~ - title: "Portfolio"
+    #~ url: /portfolio/
         
   #~ - title: "Blog Posts"
     #~ url: /year-archive/
