--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@
 
 main:
   - title: "Publications"
-    #~ url: /publications/
-    url: https://scholar.google.com/citations?user=7WTc0h4AAAAJ&hl=en&oi=ao
+    url: /publications/
+    #~ url: https://scholar.google.com/citations?user=7WTc0h4AAAAJ&hl=en&oi=ao
     
   - title: "Talks"
     url: /talks/    
