--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
     #~ url: /teaching/    
     
   - title: "Research"
-    url: /research/
+    url: /portfolio/
         
   #~ - title: "Blog Posts"
     #~ url: /year-archive/
